--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,11 @@ header {
     margin: 2rem auto;
     padding: 0 1rem;
 }
-header h2 {
+header h1 {
     margin: 8px 0;
     font-weight: 500;
 }
-header h2:first-child {
+header h1:first-child {
     font-weight: 300;
     color: #333;
 }
@@ -76,8 +76,10 @@ main {
     display: grid;
 }
 
-.item h3 {
+.item h2 {
     margin-bottom: 10px;
+    font-size: 1.25rem;
+    font-weight: 500;
 }
 .item p {
     font-size: 0.9rem;
